Fixedd the line/order posts and gets

--- a/source/includes/api/orders.md.erb
+++ b/source/includes/api/orders.md.erb
@@ -11,6 +11,8 @@
 
 <%= partial "includes/api/php_snippets/post_order_request.md" %>
 
+<%= partial "includes/api/java_snippets/post_order_request.md" %>
+
 > The above command returns JSON structured like this:
 
 <%= partial "includes/api/json_snippets/post_order_response.md" %>
