Updated attribute field for state and country

--- a/source/includes/api/orders.md.erb
+++ b/source/includes/api/orders.md.erb
@@ -60,7 +60,8 @@ type <br><em>string</em> | Shipping address is required. This will always be "sh
 name <br><em>string</em> | The name to reference the shipment details.
 address <br><em>string</em> | The shipment street plus additional details (suite/apt./etc). Additional lines should be separated by a carriage return "\n".
 city <br><em>string</em> | The city of the shipment.
-state <br><em>string</em> | Two digit ISO 3166-2 code of the destination state, ie "US".
+state <br><em>string</em> | Two letter ISO 3166-2 code of the destination state, ie "NC".
+country<br><em>string</em> | Two letter ISO 3166-1 code of the destination country, ie "US".
 postal-code <br><em>string</em> | The postal code of the shipment.
 
 <aside class="success">
