--- a/source/includes/api/orders.md.erb
+++ b/source/includes/api/orders.md.erb
@@ -36,7 +36,7 @@ vendor-po <br><em>string / number</em> | Your PO number. This string/number must
 shipping-method <br><em>string</em> | The shipping carrier and method for the order. For example, use USPSF for USPS First Class. See shipping methods.
 shipping-account-number <br><em>string</em> | The shipping account number associated with the shipping carrier and order.
 included <br><em>array[objects]</em> | The array element describing the item(s) to be included in the order.
-order-type <br> <em> string </em> <br> optional | Optional field, 'test' for a test order, 'new' for a new regular order (defaults to 'new') 
+test-order <br> <em> string </em> <br> optional | Optional field, 'test' for a test order, 'new' for a new regular order (defaults to 'new') 
 
 
 *Line Item details*
