fixed/added snippets & syntax highlighting

--- a/source/includes/api/line_items.md.erb
+++ b/source/includes/api/line_items.md.erb
@@ -6,7 +6,7 @@ Line items are included when an Order request is posted.
 
 <%= partial "includes/api/curl_snippets/get_order_line_items_request.md" %>
 <%= partial "includes/api/ruby_snippets/get_order_line_items.md" %>
-<%= partial "includes/api/python_snippets.md/get_order_line_items_request.md" %>
+<%= partial "includes/api/python_snippets/get_order_line_items_request.md" %>
 <%= partial "includes/api/java_snippets/get_order_line_items.md" %>
 <%= partial "includes/api/php_snippets/get_order_line_items.md" %>
 
@@ -39,7 +39,7 @@ Get details for a specific line item by ID.
 ### HTTPS Request
 <%= partial "includes/api/curl_snippets/get_line_item_request.md" %>
 <%= partial "includes/api/ruby_snippets/get_line_item_request.md" %>
-<%= partial "includes/api/python_snippets.md/get_line_item_request.md" %>
+<%= partial "includes/api/python_snippets/get_line_item_request.md" %>
 <%= partial "includes/api/java_snippets/get_line_item_request.md" %>
 <%= partial "includes/api/php_snippets/get_line_item_request.md" %>
 
