remove return address

--- a/source/includes/api/orders.md.erb
+++ b/source/includes/api/orders.md.erb
@@ -67,7 +67,7 @@ email <br><em>string<br>(optional)</em> | Email associated with address
 
 
 <aside class="success">
-  * An object with type billing-address or return-address may also be proivided. If they are not provided shipping-address will be used as the default.
+  * An object with type billing-address may also be proivided. If it is not provided then shipping-address will be used as the default.
 </aside>
 
 *Packing List Details (optional)*
