Updated documentation for updated shipping address endpoint

--- a/source/includes/api/authentication.md.erb
+++ b/source/includes/api/authentication.md.erb
@@ -17,7 +17,7 @@ Customers are granted a API Key that can be used to authorize requests to the ap
 
 > Be sure to replace `YOUR_API_KEY` with your API key.
 
-If you need and API key please contact your MWW representative.
+If you need an API key, please contact your MWW representative.
 
 <!---
 Access to the API uses an API key for authentication. You can register a new API key at <https://api.mwwondemand.com/account/>.
