--- a/source/includes/api/shipping_address_update.md.erb
+++ b/source/includes/api/shipping_address_update.md.erb
@@ -16,11 +16,11 @@ This endpoint will update a shipping address from an existing order.
 
 ### HTTPS Request
 
-`PATCH https://api.mwwondemand.com/api/shipping-addresses/<MWW_SHIPPING_ADDRESS_ID>`
+`PATCH https://api.mwwondemand.com/api/shipping-addresses/<YOUR_PO>`
 
-<aside class="success">
+<%# <aside class="success">
 Remember, your shipping address ID can be requested by sending a GET request to https://api.mwwondemand.com/api/orders/MWW_ORDER_ID/shipping-address !
-</aside>
+</aside> %>
 
 ### PATCH Parameters
 
